arreglado de seguridad con errores