@@ -4,9 +4,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.agronex.backend.dto.request.LaborAgricolaRequest;
 import org.agronex.backend.dto.response.LaborAgricolaResponse;
-import org.agronex.backend.dto.response.PronosticoLoteResponse;
 import org.agronex.backend.entity.LaborAgricola;
 import org.agronex.backend.entity.Lote;
+import org.agronex.backend.mapper.LaborAgricolaMapper;
 import org.agronex.backend.repository.LaborAgricolaRepository;
 import org.agronex.backend.repository.LoteRepository;
 import org.springframework.stereotype.Service;
@@ -14,7 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,55 +22,26 @@ public class LaborAgricolaService {
 
     private final LaborAgricolaRepository laborAgricolaRepository;
     private final LoteRepository loteRepository;
+    private final LaborAgricolaMapper laborAgricolaMapper;
 
     @Transactional
     public LaborAgricolaResponse crearLabor(LaborAgricolaRequest request) {
         Lote lote = loteRepository.findById(request.getLoteId())
                 .orElseThrow(() -> new IllegalArgumentException("Lote no encontrado"));
 
-        Double viento = request.getVientoKmh();
-        Double humedad = request.getHumedadPct();
-
-        LaborAgricola labor = LaborAgricola.builder()
-                .lote(lote)
-                .fecha(request.getFecha())
-                .tipoLabor(request.getTipoLabor())
-                .producto(request.getProducto())
-                .dosis(request.getDosis())
-                .unidad(request.getUnidad())
-                .vientoKmh(viento)
-                .humedadPct(humedad)
-                .observaciones(request.getObservaciones())
-                .build();
-
+        LaborAgricola labor = laborAgricolaMapper.toEntity(request, lote);
         LaborAgricola guardada = laborAgricolaRepository.save(labor);
-        return mapToResponse(guardada);
+        return laborAgricolaMapper.toResponse(guardada);
     }
 
     public List<LaborAgricolaResponse> listarPorLote(UUID loteId) {
         return laborAgricolaRepository.findByLote_IdLoteOrderByFechaDesc(loteId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(laborAgricolaMapper::toResponse)
+                .toList();
     }
 
     @Transactional
     public void eliminarLabor(UUID laborId) {
         laborAgricolaRepository.deleteById(laborId);
-    }
-
-    private LaborAgricolaResponse mapToResponse(LaborAgricola labor) {
-        return LaborAgricolaResponse.builder()
-                .id(labor.getId())
-                .loteId(labor.getLote().getIdLote())
-                .nombreLote(labor.getLote().getNombre())
-                .fecha(labor.getFecha())
-                .tipoLabor(labor.getTipoLabor())
-                .producto(labor.getProducto())
-                .dosis(labor.getDosis())
-                .unidad(labor.getUnidad())
-                .vientoKmh(labor.getVientoKmh())
-                .humedadPct(labor.getHumedadPct())
-                .observaciones(labor.getObservaciones())
-                .build();
     }
 }
